zmiany w backendzie
